--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   fl_chart: ^1.0.0
   google_fonts: ^6.2.1
   meta:
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  screenshot: ^3.0.0
+  share_plus:
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
