--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   screenshot: ^3.0.0
   share_plus:
   path_provider: ^2.1.5
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
