--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   share_plus:
   path_provider: ^2.1.5
   curved_navigation_bar: ^1.0.6
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
